// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DashboardCard
  classes={
    Object {
      "avatar": "DashboardCard-avatar-3",
      "content": "DashboardCard-content-2",
      "disabled": "DashboardCard-disabled-5",
      "icon": "DashboardCard-icon-6",
      "root": "DashboardCard-root-1",
      "title": "DashboardCard-title-4",
    }
  }
  description="desc"
  handleClick={[Function]}
  icon={null}
  isDisabled={false}
  title="Title"
/>
`;

exports[`renders disabled 1`] = `
<DashboardCard
  classes={
    Object {
      "avatar": "DashboardCard-avatar-3",
      "content": "DashboardCard-content-2",
      "disabled": "DashboardCard-disabled-5",
      "icon": "DashboardCard-icon-6",
      "root": "DashboardCard-root-1",
      "title": "DashboardCard-title-4",
    }
  }
  description="desc"
  handleClick={[Function]}
  icon={null}
  isDisabled={true}
  title="Title"
/>
`;
